index.css
@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Open+Sans&display=swap');

/*Mobile-first design*/

/*General structure*/
* {
    box-sizing: border-box;
}

body {
    width: 100%;
}

img {
    width: 75%;
    margin-left: auto;
    margin-right: auto;
    display: block;
    border-radius: 10px;
}

.hidden {
    display: none;
}

/*Landing Page for App*/
h1 {
    font-size: 54px;
    font-family: "Amatic SC", 'Courier New', Courier, monospace;
    text-align: center;
    animation-name: fade-in;
    animation-duration: 2s;
    animation-timing-function: ease-in-out;
}

@keyframes fade-in {
    from {
        transform: translateX(-1000px) scaleX(2.5) scaleY(0.2);
        transform-origin: 100% 50%;
        filter: blur(40px);
        opacity: 0;
    }
    to {
        transform: translateX(0) scaleY(1) scaleX(1);
        transform-origin: 50% 50%;
        filter: blur(0);
        opacity: 1;
    }
}

#input-destination {
    width: 75%;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 30px;
    animation-name: fade-in;
    animation-duration: 3s;
    animation-timing-function: ease-in-out;
    text-align: center;
}

.js-destination-input {
    width: 50%;
    height: 40px;
    border-radius: 15px;
    background-color: #e5e5e5;
}

#input-destination label {
    font-size: 20px;
    font-weight: 600;
    font-style: italic;
}

button {
    border-radius: 10px;
    padding: 8px 20px;
    background-color: #fca311;
    font-size: 20px;
    color: white;
    border: none;
    margin-top: 20px;
    font-family: "Open Sans", 'Courier New', Courier, monospace;
}

button:hover {
    background-color: #14213d;
    color: white;
}

/*Destination Description and Other Buttons*/

#location-description {
    width: 75%;
    margin-left: auto;
    margin-right: auto;
}

.initial-buttons {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    margin-bottom: 20px;
}

#location-description h2 {
    text-align: center;
    font-size: 32px;
    font-family: "Amatic SC", 'Courier New', Courier, monospace;
}

p {
    margin: 10px;
    font-family: "Open Sans", sans-serif;
}

#location-description h4 {
    font-size: 18px;
    text-align: center;
}

/*Results Section*/

#results {
    width: 75%;
    margin-left: auto;
    margin-right: auto;

}
h3 {
    font-size: 26px;
    padding: 10px;
    border-radius: 10px;
}

.results-item {
    width: 75%;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 10px;
    margin-top: 20px;
    background-color: #e5e5e5;
    border: 1px solid #14213d;
    border-radius: 10px;
}


.results-item h4 {
    text-align: center;
    font-size: 24px;
    background-color: #14213d;
    border-radius: 9px 9px 0px 0px;
    padding:10px;
    margin-top: 0px;
    color: #ffffff;
}

/*Style the Link in results to look like a button*/

.results-item a {
    text-decoration: none;
    background-color: #fca311;
    padding: 5px 10px;
    border-radius: 10px;
    color: #ffffff;
    font-family: "Open Sans", sans-serif;
    font-size: 16px;
}

.results-item a:hover {
    background-color: #14213d;
    color: #ffffff;
}

.website {
    text-align: right;
    margin: 20px 10px; 
}
/*Accomodations Input Form*/

#length-of-stay {
    width: 50%;
    margin-left: auto;
    margin-right: auto;
    display: flex;
    flex-direction: column;
}

.results-form button {
    background-color: #e5e5e5;
    color: #000000;
    margin-bottom: 20px;
}

.results-form button:hover {
    background-color: #000000;
    color: #ffffff;
}

/*Desktop Version*/
@media screen and (min-width: 1100px) {
    #location-description img {
        width: 100%;
    }

    h1 {
        font-size: 72px;
    }
    
    #location-description h2 {
        font-size: 64px;
    }

    p {
        font-size: 20px;
        margin: 30px;
    }

    button {
        font-size: 38px;
        margin-bottom: 30px;
    }

    .results-item {
        margin-bottom: 30px;
    }

    .results-item a {
        font-size: 30px;
    }

    #input-destination label {
        font-size: 28px;
    }

    #location-description h4 {
        font-size: 40px;
    }

    .results-item h4 {
        font-size: 34px;
    }

    .js-destination-input {
        height: 60px;
        font-size: 30px;
    }
    
}

